@@ -36,12 +36,12 @@
  */
 struct TAG_transinstr;
 
-#define TOTAL_KEYWORDS 29
+#define TOTAL_KEYWORDS 32
 #define MIN_WORD_LENGTH 1
 #define MAX_WORD_LENGTH 10
 #define MIN_HASH_VALUE 1
-#define MAX_HASH_VALUE 48
-/* maximum key range = 48, duplicates = 0 */
+#define MAX_HASH_VALUE 58
+/* maximum key range = 58, duplicates = 0 */
 
 #ifdef __GNUC__
 __inline
@@ -55,32 +55,32 @@ hash (register const char *str, register unsigned int len)
 {
   static const unsigned char asso_values[] =
     {
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 25, 28, 20, 20, 10,
-       5, 25, 49,  5,  0, 49, 10,  5,  0, 13,
-       0,  5,  5,  0,  0, 49, 20, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49, 49, 49, 49, 49,
-      49, 49, 49, 49, 49, 49
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 35, 35, 10, 20, 10,
+       5, 15, 59,  5,  0, 59, 20,  5,  0, 50,
+       0, 15,  5,  0,  0, 59, 25, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59, 59, 59, 59, 59,
+      59, 59, 59, 59, 59, 59
     };
   return len + asso_values[(unsigned char)str[len - 1]] + asso_values[(unsigned char)str[0]];
 }
@@ -91,7 +91,7 @@ static const struct TAG_transinstr wordlist[] =
     {"J",		INS_PRIMARY, 	I_J,		NULL},
     {"ST",		INS_OTHER,	I_ST,		NULL},
     {"NOT",		INS_SECONDARY,	I_NOT,		NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"TRAP",		INS_SECONDARY,	I_TRAP,		NULL},
     {"STOPP",		INS_SECONDARY,	I_STOPP,	NULL},
     {"STARTP",		INS_SECONDARY,	I_STARTP,	NULL},
     {"IN",		INS_SECONDARY,	I_IN,		NULL},
@@ -99,38 +99,48 @@ static const struct TAG_transinstr wordlist[] =
     {"RUNP",		INS_SECONDARY,	I_RUNP,		NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {"SETERR",		INS_SECONDARY,	I_SETERR,	NULL},
-    {"LT",		INS_SECONDARY,	I_LT,		NULL},
+    {"CJ",		INS_PRIMARY,	I_CJ,		NULL},
     {"REM",		INS_SECONDARY,	I_REM,		NULL},
     {"ENDP",		INS_SECONDARY,	I_ENDP,		NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"OUT",		INS_SECONDARY,	I_OUT,		NULL},
-    {"EQ",		INS_SECONDARY,	I_EQ,		NULL},
-    {"MUL",		INS_SECONDARY,	I_MUL,		NULL},
-    {"MOVE",		INS_SECONDARY,	I_MOVE,		NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"CJ",		INS_PRIMARY,	I_CJ,		NULL},
-    {"LDL",		INS_PRIMARY,	I_LDL,		NULL},
-    {"PROD",		INS_SECONDARY,	I_PROD,		NULL},
-    {"RESCHEDULE",	INS_SECONDARY,	I_RESCHEDULE,	NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {"GT",		INS_SECONDARY,	I_GT,		NULL},
     {"NEG",		INS_SECONDARY,	I_NEG,		NULL},
+    {"MOVE",		INS_SECONDARY,	I_MOVE,		NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"MALLOC",		INS_SECONDARY,	I_MALLOC,	NULL},
+    {"LT",		INS_SECONDARY,	I_LT,		NULL},
+    {"MRELEASE",	INS_SECONDARY,	I_MRELEASE,	NULL},
+    {"PROD",		INS_SECONDARY,	I_PROD,		NULL},
+    {"RESCHEDULE",	INS_SECONDARY,	I_RESCHEDULE,	NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"EQ",		INS_SECONDARY,	I_EQ,		NULL},
+    {"MUL",		INS_SECONDARY,	I_MUL,		NULL},
     {"DIFF",		INS_SECONDARY,	I_DIFF,		NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"SUB",		INS_SECONDARY,	I_SUB,		NULL},
-    {"LD",		INS_OTHER,	I_LD,		NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
     {"LDC",		INS_PRIMARY,	I_LDC,		NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"SUB",		INS_SECONDARY,	I_SUB,		NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"LD",		INS_OTHER,	I_LD,		NULL},
+    {"LDL",		INS_PRIMARY,	I_LDL,		NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
     {"BOOLINVERT",	INS_SECONDARY,	I_BOOLINVERT,	NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
     {"DIV",		INS_SECONDARY,	I_DIV,		NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"OUT",		INS_SECONDARY,	I_OUT,		NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
