@@ -44,5 +44,8 @@ RUNP,		INS_SECONDARY,	I_RUNP,		NULL
 SETERR,		INS_SECONDARY,	I_SETERR,	NULL
 LD,		INS_OTHER,	I_LD,		NULL
 ST,		INS_OTHER,	I_ST,		NULL
+MALLOC,		INS_SECONDARY,	I_MALLOC,	NULL
+MRELEASE,	INS_SECONDARY,	I_MRELEASE,	NULL
+TRAP,		INS_SECONDARY,	I_TRAP,		NULL
 %%
 
