@@ -1,4 +1,6 @@
 
+14/10/2005	frmb	added a couple more transputer instructions (occam-pi specific)
+14/10/2005	frmb	changed parser for formal parameters, should pick up type-attributes correctly now
 13/10/2005	frmb	initial support for inline transputer assembler
 11/10/2005	frmb	modified grammar slightly for CHAN TYPE parsing
 10/10/2005	frmb	read/write library support, more XML-keys
